objects/FINS_Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>FINS_CIB_Domicile_of_the_IM__c</fullName>
        <label>Domicile of the Investment Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>The Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investment Manager</fullName>
                </value>
                <value>
                    <fullName>Fund</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>S Corporation</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Corporation</fullName>
                </value>
                <value>
                    <fullName>Revocable Trust</fullName>
                </value>
                <value>
                    <fullName>Irrevocable Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Expected_Activity__c</fullName>
        <label>Expected Activity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Expected_Monthly_Deposits__c</fullName>
        <label>Expected Monthly Deposits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Expected_Monthly_Transfers__c</fullName>
        <label>Expected Monthly Transfers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Expected_Monthly_Withdrawals__c</fullName>
        <label>Expected Monthly Withdrawals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_FATCA_Entity_Type__c</fullName>
        <label>FATCA Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Institution</fullName>
                </value>
                <value>
                    <fullName>NFFEs other than Passive NFFEs</fullName>
                </value>
                <value>
                    <fullName>Passive NFFE</fullName>
                </value>
                <value>
                    <fullName>Exempt Beneficial Owners</fullName>
                </value>
                <value>
                    <fullName>Deemed Compliant Investment Entities</fullName>
                </value>
                <value>
                    <fullName>Reporting Model 1 or 2 FFI</fullName>
                </value>
                <value>
                    <fullName>Participating FFI</fullName>
                </value>
                <value>
                    <fullName>Registered Deemed Compliant</fullName>
                </value>
                <value>
                    <fullName>Certified Deemed Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_FinCEN_CDD_Final_Rule_Exemption__c</fullName>
        <label>FinCEN CDD Final Rule Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FI regulated by a Federal regulator</fullName>
                </value>
                <value>
                    <fullName>Bank regulated by a state regulator</fullName>
                </value>
                <value>
                    <fullName>A department or agency of the US, of any State, or of any political subdivision of a State</fullName>
                </value>
                <value>
                    <fullName>Any entity established under the laws of the US, or any State, or of any political subdivision of any State, or under an interstate compact</fullName>
                </value>
                <value>
                    <fullName>Any entity (other than a bank) whose common stock or analogous ​​equity interests are listed on the New York, American, or NASDAQ stock exchange</fullName>
                </value>
                <value>
                    <fullName>Any entity organized under the laws of the US or of any State at least 51% of whose common stock or analogous equity interests are held by a listed entity</fullName>
                </value>
                <value>
                    <fullName>Issuers of securities registered under section 12 of the Securities Exchange Act of 1934 (SEA) or that is required to file reports under 15(d) of that Act</fullName>
                </value>
                <value>
                    <fullName>An investment company, as defined in section 3 of the Investment Company Act of 1940, registered with the U.S. Securities and Exchange Commission (SEC)</fullName>
                </value>
                <value>
                    <fullName>An SEC-registered investment adviser, as defined in section 202(a)(11) of the Investment Advisers Act of 1940</fullName>
                </value>
                <value>
                    <fullName>An exchange or clearing agency, as defined in section 3 of the SEA, registered under section 6 or 17A of that Act</fullName>
                </value>
                <value>
                    <fullName>Any other entity registered with the SEC under the SEA</fullName>
                </value>
                <value>
                    <fullName>A registered entity, commodity pool operator, commodity trading advisor, retail foreign exchange dealer, swap dealer, or major swap participant, defined in section 1a of the Commodity Exchange Act, registered with the Commodity Futures Trading Commission</fullName>
                </value>
                <value>
                    <fullName>A public accounting firm registered under section 102 of the Sarbanes-Oxley Act</fullName>
                </value>
                <value>
                    <fullName>A bank holding company, as defined in section 2 of the Bank Holding Company</fullName>
                </value>
                <value>
                    <fullName>Act of 1956 (12 USC 1841) or savings and loan holding company, as defined in section 10(n) of the Home Owners’ Loan Act (12 USC 1467a(n))</fullName>
                </value>
                <value>
                    <fullName>A pooled investment vehicle operated or advised by a financial institution excluded from the definition of legal entity customer under the final CDD rule</fullName>
                </value>
                <value>
                    <fullName>An insurance company regulated by a State</fullName>
                </value>
                <value>
                    <fullName>A financial market utility designated by the Financial Stability Oversight Council under Title VIII of the Dodd-Frank Wall Street Reform and Customer Protection Act of 2010</fullName>
                </value>
                <value>
                    <fullName>A foreign financial institution established in a jurisdiction where the regulator of such institution maintains beneficial ownership information regarding such institution</fullName>
                </value>
                <value>
                    <fullName>A non-U.S. governmental department, agency or political subdivision that engages only in governmental rather than commercial activities</fullName>
                </value>
                <value>
                    <fullName>Any legal entity only to the extent that it opens a private banking account subject to 31 CFR 1010.620</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Full_Legal_Name_of_Customer_Txt__c</fullName>
        <label>Full Legal Name of Customer Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Full_Legal_Name_of_the_Customer__c</fullName>
        <label>Full Legal Name of the Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Onboardings</relationshipLabel>
        <relationshipName>Onboardings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Full_Legal_Name_of_the_Fund__c</fullName>
        <label>Full Legal Name of the Fund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Full_Legal_Name_of_the_IM__c</fullName>
        <label>Full Legal Name of the Investment Manage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Fund_Short_Name_Trading_Name__c</fullName>
        <label>Fund Short Name/Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_GIIN__c</fullName>
        <label>GIIN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_IM_Country_of_Incorp__c</fullName>
        <label>Investment Manager Country of Incorp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>The Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_IM_Registration_Body__c</fullName>
        <label>Investment Manager Registration Body</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_IM_Registration_Number__c</fullName>
        <label>Investment Manager Registration Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_I_confirm_all_individuals__c</fullName>
        <label>I confirm all individuals were added</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Initial_Source_of_Funds__c</fullName>
        <label>Initial Source of Funds</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retained Earnings</fullName>
                </value>
                <value>
                    <fullName>Debt Capital</fullName>
                </value>
                <value>
                    <fullName>Equity Capital</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Venture Capital</fullName>
                </value>
                <value>
                    <fullName>Donations</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_International_Bank_Account__c</fullName>
        <label>International Bank Account Number (IBAN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Investment_Manager_Regulated__c</fullName>
        <label>Is the Investment Manager Regulated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Investment_Manager_Regulator__c</fullName>
        <label>Investment Manager Regulator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACPR (French Prudential Supervision and Resolution Authority). France.</fullName>
                </value>
                <value>
                    <fullName>AMF (Autorite des Marches Financiers). France.</fullName>
                </value>
                <value>
                    <fullName>ADGM (Abu Dhabi Global Market). Abu Dhabi.</fullName>
                </value>
                <value>
                    <fullName>APRA (Australian Prudential Regulation Authority). Australia.</fullName>
                </value>
                <value>
                    <fullName>ASF (Financial Supervisory Authority). Romania.</fullName>
                </value>
                <value>
                    <fullName>ASFI (Autoridad de Supervision del Sistema Financiero). Bolivia.</fullName>
                </value>
                <value>
                    <fullName>Banco de Portugal. Portugal.</fullName>
                </value>
                <value>
                    <fullName>Bank of Greece. Greece</fullName>
                </value>
                <value>
                    <fullName>Bank of Italy. Italy</fullName>
                </value>
                <value>
                    <fullName>BIS (Banking Committee on Banking Supervision). Worldwide</fullName>
                </value>
                <value>
                    <fullName>BOE (Bank of England). United Kingdom.</fullName>
                </value>
                <value>
                    <fullName>Central Bank of Ireland. Ireland.</fullName>
                </value>
                <value>
                    <fullName>Central Bank of U.A.E. U.A.E.</fullName>
                </value>
                <value>
                    <fullName>CFPB (Consumer Financial Protection Bureau). USA</fullName>
                </value>
                <value>
                    <fullName>CFTC (U.S Commodity Futures Trading Commission). USA.</fullName>
                </value>
                <value>
                    <fullName>CFTC/NFA (National Futures Association). USA.</fullName>
                </value>
                <value>
                    <fullName>CIMA (Cayman Islands Monetary Authority). Cayman Islands.</fullName>
                </value>
                <value>
                    <fullName>CMVM (Portugese Securities Market Commission). Portugal.</fullName>
                </value>
                <value>
                    <fullName>CNMV (Comision Nacional del Mercado de Valores). Spain.</fullName>
                </value>
                <value>
                    <fullName>CONSOB (Commissione Nazionale per le Societa la Borsa). Italy.</fullName>
                </value>
                <value>
                    <fullName>CSSF (Commission de Surveillance du Secteur Financier). Luxemburg.</fullName>
                </value>
                <value>
                    <fullName>DFS (Department of Financial Services). USA.</fullName>
                </value>
                <value>
                    <fullName>DFSA (Dubai Financial Services Authority). Dubai.</fullName>
                </value>
                <value>
                    <fullName>EBA (European Banking Authority). EU.</fullName>
                </value>
                <value>
                    <fullName>ECB (European Central Bank). EU.</fullName>
                </value>
                <value>
                    <fullName>ERMC (European Risk Management Council). EU.</fullName>
                </value>
                <value>
                    <fullName>ESMA (European Securities and Markets Authority) EU.</fullName>
                </value>
                <value>
                    <fullName>European Commission. EU.</fullName>
                </value>
                <value>
                    <fullName>FCA (Financial Conduct Authority). UK.</fullName>
                </value>
                <value>
                    <fullName>FCAC (Financial Consumer Agency of Canada). Canada.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Is_the_Customer_Regulated__c</fullName>
        <label>Is the Customer Regulated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Is_the_Parent_Regulated__c</fullName>
        <label>Is the Parent Regulated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Is_the_Parent_publicly_traded__c</fullName>
        <label>Is the Parent publicly traded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Is_the_customer_a_100_sub__c</fullName>
        <inlineHelpText>Is the customer a 100% subsidiary of a parent?</inlineHelpText>
        <label>Is the customer 100% subsid of parent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Is_the_customer_a_US_Person__c</fullName>
        <label>Is the customer considered a US Person?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Is_the_customer_publicly_traded__c</fullName>
        <label>Is the customer publicly traded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Jurisdiction_of_Onboarding__c</fullName>
        <label>Jurisdiction(s) of Onboarding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_KYC_Risk_Rating_Description__c</fullName>
        <label>KYC Risk Rating Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_KYC_Risk_Rating__c</fullName>
        <label>KYC Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Legal_Comments__c</fullName>
        <label>Legal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Legal_Entity_Identifier_LEI__c</fullName>
        <label>Legal Entity Identifier (LEI)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Legal_Name_of_the_Administrator__c</fullName>
        <label>Full Legal Name of the Administrator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Legal_Name_of_the_Custodian__c</fullName>
        <label>Full Legal Name of the Custodian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Legal_Status__c</fullName>
        <label>Legal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_NAIC_Code__c</fullName>
        <label>NAIC Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCOMMODATION, FOOD SERVICES, &amp; DRINKING PLACES</fullName>
                </value>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>721310 Rooming &amp; boarding houses</fullName>
                </value>
                <value>
                    <fullName>721211 RV (recreational vehicle) parks &amp; recreational camps</fullName>
                </value>
                <value>
                    <fullName>721110 Hotels &amp; motels</fullName>
                </value>
                <value>
                    <fullName>721191 Bed &amp; breakfast, inns</fullName>
                </value>
                <value>
                    <fullName>Food Services &amp; Drinking Places</fullName>
                </value>
                <value>
                    <fullName>722514 Cafeterias &amp; buffets</fullName>
                </value>
                <value>
                    <fullName>722410 Drinking places (alcoholic beverages)</fullName>
                </value>
                <value>
                    <fullName>722511 Full-service restaurants</fullName>
                </value>
                <value>
                    <fullName>722513 Limited-service restaurants</fullName>
                </value>
                <value>
                    <fullName>722515 Snack &amp; non-alcoholic beverage bars</fullName>
                </value>
                <value>
                    <fullName>722310 Food service contractors</fullName>
                </value>
                <value>
                    <fullName>722320 Caterers</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRATIVE &amp; SUPPORT AND WASTE MANAGEMENT &amp; REMEDIATION SERVICES</fullName>
                </value>
                <value>
                    <fullName>Administrative &amp; Support Services</fullName>
                </value>
                <value>
                    <fullName>561439 Business service centers (including private mail centers &amp; copy shops)</fullName>
                </value>
                <value>
                    <fullName>561740 Carpet &amp; upholstery cleaning services</fullName>
                </value>
                <value>
                    <fullName>561440 Collection agencies</fullName>
                </value>
                <value>
                    <fullName>561450 Credit bureaus</fullName>
                </value>
                <value>
                    <fullName>561410 Document preparation services</fullName>
                </value>
                <value>
                    <fullName>561320 Employment services</fullName>
                </value>
                <value>
                    <fullName>561710 Exterminating &amp; pest control services</fullName>
                </value>
                <value>
                    <fullName>561210 Facilities support (mngt) services</fullName>
                </value>
                <value>
                    <fullName>561611 Private investigation services</fullName>
                </value>
                <value>
                    <fullName>561612 Security services</fullName>
                </value>
                <value>
                    <fullName>561720 Janitorial services</fullName>
                </value>
                <value>
                    <fullName>561730 Landscaping services</fullName>
                </value>
                <value>
                    <fullName>561110 Office administrative services</fullName>
                </value>
                <value>
                    <fullName>561421 Telephone answering services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Net_Turnover__c</fullName>
        <label>Net Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_OTC_Derivatives_Agreement_Type__c</fullName>
        <label>OTC Derivatives Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISDA Master Agreement</fullName>
                </value>
                <value>
                    <fullName>Bi-lateral Agreement</fullName>
                </value>
                <value>
                    <fullName>Amendment to ISDA Master Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Onboarding_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Onboardings (Onboarding Contact)</relationshipLabel>
        <relationshipName>Onboardings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Onboarding_Description__c</fullName>
        <label>Onboarding Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>